Compi2Python/back/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> init
Rule 1     init -> statements
Rule 2     statements -> statements statement
Rule 3     statements -> <empty>
Rule 4     statement -> create_database_statement
Rule 5     statement -> use_statement
Rule 6     statement -> declare_statement
Rule 7     statement -> set_statement
Rule 8     statement -> create_table_statement
Rule 9     statement -> select_statement
Rule 10    statement -> insert_statement
Rule 11    statement -> create_function_statement
Rule 12    statement -> create_procedure_statement
Rule 13    statement -> alter_table_statement
Rule 14    statement -> if_statement
Rule 15    statement -> exec_statement
Rule 16    statement -> drop_table_statement
Rule 17    statement -> update_statement
Rule 18    statement -> while_statement
Rule 19    statement -> truncate_statement
Rule 20    statement -> delete_statement
Rule 21    create_database_statement -> CREATE DATA BASE NAME SEMICOLON
Rule 22    use_statement -> USE NAME SEMICOLON
Rule 23    declare_statement -> DECLARE ID AS type SEMICOLON
Rule 24    declare_statement -> DECLARE ID type SEMICOLON
Rule 25    set_statement -> SET assignments SEMICOLON
Rule 26    assignments -> assignments COMMA ID ASSIGN a
Rule 27    assignments -> ID ASSIGN a
Rule 28    create_table_statement -> CREATE TABLE NAME L_PAREN properties R_PAREN SEMICOLON
Rule 29    properties -> properties COMMA property
Rule 30    properties -> property
Rule 31    property -> NAME type null_prod PRIMARY KEY
Rule 32    property -> NAME type null_prod
Rule 33    property -> NAME type null_prod REFERENCE NAME L_PAREN NAME R_PAREN
Rule 34    null_prod -> NOT NULL
Rule 35    null_prod -> NULL
Rule 36    null_prod -> <empty>
Rule 37    select_statement -> SELECT columns FROM NAME SEMICOLON
Rule 38    select_statement -> SELECT columns FROM NAME WHERE a SEMICOLON
Rule 39    insert_statement -> INSERT INTO NAME L_PAREN columns R_PAREN VALUES L_PAREN vals R_PAREN SEMICOLON
Rule 40    columns -> columns COMMA column
Rule 41    columns -> columns COMMA column POINT column
Rule 42    columns -> column POINT column
Rule 43    columns -> column
Rule 44    column -> TIMES
Rule 45    column -> NAME
Rule 46    column -> case_statement
Rule 47    column -> if_statement
Rule 48    column -> call_function_prod
Rule 49    column -> a NAME
Rule 50    vals -> vals COMMA a
Rule 51    vals -> a
Rule 52    create_function_statement -> CREATE FUNCTION NAME L_PAREN parameters R_PAREN RETURN type AS BEGIN statements RETURN a END SEMICOLON
Rule 53    create_procedure_statement -> CREATE PROCEDURE NAME L_PAREN parameters R_PAREN AS BEGIN statements END SEMICOLON
Rule 54    parameters -> parameters COMMA ID AS type
Rule 55    parameters -> parameters COMMA ID type
Rule 56    parameters -> ID AS type
Rule 57    parameters -> ID type
Rule 58    alter_table_statement -> ALTER TABLE NAME ADD COLUMN NAME type SEMICOLON
Rule 59    alter_table_statement -> ALTER TABLE NAME DROP COLUMN NAME SEMICOLON
Rule 60    if_statement -> IF a THEN statements END IF SEMICOLON
Rule 61    if_statement -> IF a THEN statements ELSE statements END IF SEMICOLON
Rule 62    if_statement -> IF L_PAREN a COMMA a COMMA a R_PAREN SEMICOLON
Rule 63    if_statement -> IF L_PAREN a COMMA a COMMA a R_PAREN AS NAME
Rule 64    exec_statement -> EXEC NAME vals SEMICOLON
Rule 65    drop_table_statement -> DROP TABLE NAME SEMICOLON
Rule 66    update_statement -> UPDATE NAME SET column_assignments WHERE a SEMICOLON
Rule 67    column_assignments -> column_assignments COMMA NAME ASSIGN a
Rule 68    column_assignments -> NAME ASSIGN a
Rule 69    while_statement -> WHILE a BEGIN statements END SEMICOLON
Rule 70    truncate_statement -> TRUNCATE TABLE NAME SEMICOLON
Rule 71    delete_statement -> DELETE FROM NAME WHERE a SEMICOLON
Rule 72    case_statement -> CASE when_statements END NAME
Rule 73    when_statements -> WHEN a THEN a when_statements
Rule 74    when_statements -> ELSE THEN a
Rule 75    type -> INT
Rule 76    type -> DECIMAL
Rule 77    type -> DATE
Rule 78    type -> DATETIME
Rule 79    type -> NCHAR L_PAREN a R_PAREN
Rule 80    type -> NVARCHAR L_PAREN a R_PAREN
Rule 81    a -> a OR b
Rule 82    a -> b
Rule 83    b -> b AND c
Rule 84    b -> c
Rule 85    c -> NOT_SIGN d
Rule 86    c -> d
Rule 87    d -> d EQUALS e
Rule 88    d -> d NOT_EQ e
Rule 89    d -> d LESS_THAN e
Rule 90    d -> d GREATER_THAN e
Rule 91    d -> d LESS_EQ e
Rule 92    d -> d GREATER_EQ e
Rule 93    d -> e
Rule 94    e -> e PLUS f
Rule 95    e -> e MINUS f
Rule 96    e -> f
Rule 97    f -> f TIMES g
Rule 98    f -> f DIVIDE g
Rule 99    f -> g
Rule 100   g -> MINUS h
Rule 101   g -> h
Rule 102   h -> INTEGER_VALUE
Rule 103   h -> DECIMAL_VALUE
Rule 104   h -> STRING
Rule 105   h -> ID
Rule 106   h -> NAME
Rule 107   h -> if_statement
Rule 108   call_function_prod -> HOY L_PAREN R_PAREN
Rule 109   call_function_prod -> CONCATENAR L_PAREN a COMMA a R_PAREN
Rule 110   call_function_prod -> SUBSTRAER L_PAREN a R_PAREN
Rule 111   call_function_prod -> CONTAR L_PAREN a R_PAREN
Rule 112   call_function_prod -> SUMA L_PAREN a R_PAREN
Rule 113   call_function_prod -> CAS L_PAREN a AS type R_PAREN

Terminals, with rules where they appear

ADD                  : 58
ALTER                : 58 59
AND                  : 83
AS                   : 23 52 53 54 56 63 113
ASSIGN               : 26 27 67 68
BASE                 : 21
BEGIN                : 52 53 69
CAS                  : 113
CASE                 : 72
COLUMN               : 58 59
COMMA                : 26 29 40 41 50 54 55 62 62 63 63 67 109
CONCATENAR           : 109
CONTAR               : 111
CREATE               : 21 28 52 53
DATA                 : 21
DATE                 : 77
DATETIME             : 78
DECIMAL              : 76
DECIMAL_VALUE        : 103
DECLARE              : 23 24
DELETE               : 71
DIVIDE               : 98
DROP                 : 59 65
ELSE                 : 61 74
END                  : 52 53 60 61 69 72
EQUALS               : 87
EXEC                 : 64
FROM                 : 37 38 71
FUNCTION             : 52
GREATER_EQ           : 92
GREATER_THAN         : 90
HOY                  : 108
ID                   : 23 24 26 27 54 55 56 57 105
IF                   : 60 60 61 61 62 63
INSERT               : 39
INT                  : 75
INTEGER_VALUE        : 102
INTO                 : 39
KEY                  : 31
LESS_EQ              : 91
LESS_THAN            : 89
L_PAREN              : 28 33 39 39 52 53 62 63 79 80 108 109 110 111 112 113
MINUS                : 95 100
NAME                 : 21 22 28 31 32 33 33 33 37 38 39 45 49 52 53 58 58 59 59 63 64 65 66 67 68 70 71 72 106
NCHAR                : 79
NOT                  : 34
NOT_EQ               : 88
NOT_SIGN             : 85
NULL                 : 34 35
NVARCHAR             : 80
OR                   : 81
PLUS                 : 94
POINT                : 41 42
PRIMARY              : 31
PROCEDURE            : 53
REFERENCE            : 33
RETURN               : 52 52
R_PAREN              : 28 33 39 39 52 53 62 63 79 80 108 109 110 111 112 113
SELECT               : 37 38
SEMICOLON            : 21 22 23 24 25 28 37 38 39 52 53 58 59 60 61 62 64 65 66 69 70 71
SET                  : 25 66
STRING               : 104
SUBSTRAER            : 110
SUMA                 : 112
TABLE                : 28 58 59 65 70
THEN                 : 60 61 73 74
TIMES                : 44 97
TRUNCATE             : 70
UPDATE               : 66
USE                  : 22
VALUES               : 39
WHEN                 : 73
WHERE                : 38 66 71
WHILE                : 69
error                : 

Nonterminals, with rules where they appear

a                    : 26 27 38 49 50 51 52 60 61 62 62 62 63 63 63 66 67 68 69 71 73 73 74 79 80 81 109 109 110 111 112 113
alter_table_statement : 13
assignments          : 25 26
b                    : 81 82 83
c                    : 83 84
call_function_prod   : 48
case_statement       : 46
column               : 40 41 41 42 42 43
column_assignments   : 66 67
columns              : 37 38 39 40 41
create_database_statement : 4
create_function_statement : 11
create_procedure_statement : 12
create_table_statement : 8
d                    : 85 86 87 88 89 90 91 92
declare_statement    : 6
delete_statement     : 20
drop_table_statement : 16
e                    : 87 88 89 90 91 92 93 94 95
exec_statement       : 15
f                    : 94 95 96 97 98
g                    : 97 98 99
h                    : 100 101
if_statement         : 14 47 107
init                 : 0
insert_statement     : 10
null_prod            : 31 32 33
parameters           : 52 53 54 55
properties           : 28 29
property             : 29 30
select_statement     : 9
set_statement        : 7
statement            : 2
statements           : 1 2 52 53 60 61 61 69
truncate_statement   : 19
type                 : 23 24 31 32 33 52 54 55 56 57 58 113
update_statement     : 17
use_statement        : 5
vals                 : 39 50 64
when_statements      : 72 73
while_statement      : 18

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . statements
    (2) statements -> . statements statement
    (3) statements -> .

    CREATE          reduce using rule 3 (statements -> .)
    USE             reduce using rule 3 (statements -> .)
    DECLARE         reduce using rule 3 (statements -> .)
    SET             reduce using rule 3 (statements -> .)
    SELECT          reduce using rule 3 (statements -> .)
    INSERT          reduce using rule 3 (statements -> .)
    ALTER           reduce using rule 3 (statements -> .)
    IF              reduce using rule 3 (statements -> .)
    EXEC            reduce using rule 3 (statements -> .)
    DROP            reduce using rule 3 (statements -> .)
    UPDATE          reduce using rule 3 (statements -> .)
    WHILE           reduce using rule 3 (statements -> .)
    TRUNCATE        reduce using rule 3 (statements -> .)
    DELETE          reduce using rule 3 (statements -> .)
    $end            reduce using rule 3 (statements -> .)

    init                           shift and go to state 1
    statements                     shift and go to state 2

state 1

    (0) S' -> init .



state 2

    (1) init -> statements .
    (2) statements -> statements . statement
    (4) statement -> . create_database_statement
    (5) statement -> . use_statement
    (6) statement -> . declare_statement
    (7) statement -> . set_statement
    (8) statement -> . create_table_statement
    (9) statement -> . select_statement
    (10) statement -> . insert_statement
    (11) statement -> . create_function_statement
    (12) statement -> . create_procedure_statement
    (13) statement -> . alter_table_statement
    (14) statement -> . if_statement
    (15) statement -> . exec_statement
    (16) statement -> . drop_table_statement
    (17) statement -> . update_statement
    (18) statement -> . while_statement
    (19) statement -> . truncate_statement
    (20) statement -> . delete_statement
    (21) create_database_statement -> . CREATE DATA BASE NAME SEMICOLON
    (22) use_statement -> . USE NAME SEMICOLON
    (23) declare_statement -> . DECLARE ID AS type SEMICOLON
    (24) declare_statement -> . DECLARE ID type SEMICOLON
    (25) set_statement -> . SET assignments SEMICOLON
    (28) create_table_statement -> . CREATE TABLE NAME L_PAREN properties R_PAREN SEMICOLON
    (37) select_statement -> . SELECT columns FROM NAME SEMICOLON
    (38) select_statement -> . SELECT columns FROM NAME WHERE a SEMICOLON
    (39) insert_statement -> . INSERT INTO NAME L_PAREN columns R_PAREN VALUES L_PAREN vals R_PAREN SEMICOLON
    (52) create_function_statement -> . CREATE FUNCTION NAME L_PAREN parameters R_PAREN RETURN type AS BEGIN statements RETURN a END SEMICOLON
    (53) create_procedure_statement -> . CREATE PROCEDURE NAME L_PAREN parameters R_PAREN AS BEGIN statements END SEMICOLON
    (58) alter_table_statement -> . ALTER TABLE NAME ADD COLUMN NAME type SEMICOLON
    (59) alter_table_statement -> . ALTER TABLE NAME DROP COLUMN NAME SEMICOLON
    (60) if_statement -> . IF a THEN statements END IF SEMICOLON
    (61) if_statement -> . IF a THEN statements ELSE statements END IF SEMICOLON
    (62) if_statement -> . IF L_PAREN a COMMA a COMMA a R_PAREN SEMICOLON
    (63) if_statement -> . IF L_PAREN a COMMA a COMMA a R_PAREN AS NAME
    (64) exec_statement -> . EXEC NAME vals SEMICOLON
    (65) drop_table_statement -> . DROP TABLE NAME SEMICOLON
    (66) update_statement -> . UPDATE NAME SET column_assignments WHERE a SEMICOLON
    (69) while_statement -> . WHILE a BEGIN statements END SEMICOLON
    (70) truncate_statement -> . TRUNCATE TABLE NAME SEMICOLON
    (71) delete_statement -> . DELETE FROM NAME WHERE a SEMICOLON

    $end            reduce using rule 1 (init -> statements .)
    CREATE          shift and go to state 21
    USE             shift and go to state 22
    DECLARE         shift and go to state 23
    SET             shift and go to state 24
    SELECT          shift and go to state 25
    INSERT          shift and go to state 26
    ALTER           shift and go to state 27
    IF              shift and go to state 29
    EXEC            shift and go to state 30
    DROP            shift and go to state 28
    UPDATE          shift and go to state 31
    WHILE           shift and go to state 32
    TRUNCATE        shift and go to state 33
    DELETE          shift and go to state 34

    statement                      shift and go to state 3
    create_database_statement      shift and go to state 4
    use_statement                  shift and go to state 5
    declare_statement              shift and go to state 6
    set_statement                  shift and go to state 7
    create_table_statement         shift and go to state 8
    select_statement               shift and go to state 9
    insert_statement               shift and go to state 10
    create_function_statement      shift and go to state 11
    create_procedure_statement     shift and go to state 12
    alter_table_statement          shift and go to state 13
    if_statement                   shift and go to state 14
    exec_statement                 shift and go to state 15
    drop_table_statement           shift and go to state 16
    update_statement               shift and go to state 17
    while_statement                shift and go to state 18
    truncate_statement             shift and go to state 19
    delete_statement               shift and go to state 20

state 3

    (2) statements -> statements statement .

    CREATE          reduce using rule 2 (statements -> statements statement .)
    USE             reduce using rule 2 (statements -> statements statement .)
    DECLARE         reduce using rule 2 (statements -> statements statement .)
    SET             reduce using rule 2 (statements -> statements statement .)
    SELECT          reduce using rule 2 (statements -> statements statement .)
    INSERT          reduce using rule 2 (statements -> statements statement .)
    ALTER           reduce using rule 2 (statements -> statements statement .)
    IF              reduce using rule 2 (statements -> statements statement .)
    EXEC            reduce using rule 2 (statements -> statements statement .)
    DROP            reduce using rule 2 (statements -> statements statement .)
    UPDATE          reduce using rule 2 (statements -> statements statement .)
    WHILE           reduce using rule 2 (statements -> statements statement .)
    TRUNCATE        reduce using rule 2 (statements -> statements statement .)
    DELETE          reduce using rule 2 (statements -> statements statement .)
    $end            reduce using rule 2 (statements -> statements statement .)
    END             reduce using rule 2 (statements -> statements statement .)
    ELSE            reduce using rule 2 (statements -> statements statement .)
    RETURN          reduce using rule 2 (statements -> statements statement .)


state 4

    (4) statement -> create_database_statement .

    CREATE          reduce using rule 4 (statement -> create_database_statement .)
    USE             reduce using rule 4 (statement -> create_database_statement .)
    DECLARE         reduce using rule 4 (statement -> create_database_statement .)
    SET             reduce using rule 4 (statement -> create_database_statement .)
    SELECT          reduce using rule 4 (statement -> create_database_statement .)
    INSERT          reduce using rule 4 (statement -> create_database_statement .)
    ALTER           reduce using rule 4 (statement -> create_database_statement .)
    IF              reduce using rule 4 (statement -> create_database_statement .)
    EXEC            reduce using rule 4 (statement -> create_database_statement .)
    DROP            reduce using rule 4 (statement -> create_database_statement .)
    UPDATE          reduce using rule 4 (statement -> create_database_statement .)
    WHILE           reduce using rule 4 (statement -> create_database_statement .)
    TRUNCATE        reduce using rule 4 (statement -> create_database_statement .)
    DELETE          reduce using rule 4 (statement -> create_database_statement .)
    $end            reduce using rule 4 (statement -> create_database_statement .)
    END             reduce using rule 4 (statement -> create_database_statement .)
    ELSE            reduce using rule 4 (statement -> create_database_statement .)
    RETURN          reduce using rule 4 (statement -> create_database_statement .)


state 5

    (5) statement -> use_statement .

    CREATE          reduce using rule 5 (statement -> use_statement .)
    USE             reduce using rule 5 (statement -> use_statement .)
    DECLARE         reduce using rule 5 (statement -> use_statement .)
    SET             reduce using rule 5 (statement -> use_statement .)
    SELECT          reduce using rule 5 (statement -> use_statement .)
    INSERT          reduce using rule 5 (statement -> use_statement .)
    ALTER           reduce using rule 5 (statement -> use_statement .)
    IF              reduce using rule 5 (statement -> use_statement .)
    EXEC            reduce using rule 5 (statement -> use_statement .)
    DROP            reduce using rule 5 (statement -> use_statement .)
    UPDATE          reduce using rule 5 (statement -> use_statement .)
    WHILE           reduce using rule 5 (statement -> use_statement .)
    TRUNCATE        reduce using rule 5 (statement -> use_statement .)
    DELETE          reduce using rule 5 (statement -> use_statement .)
    $end            reduce using rule 5 (statement -> use_statement .)
    END             reduce using rule 5 (statement -> use_statement .)
    ELSE            reduce using rule 5 (statement -> use_statement .)
    RETURN          reduce using rule 5 (statement -> use_statement .)


state 6

    (6) statement -> declare_statement .

    CREATE          reduce using rule 6 (statement -> declare_statement .)
    USE             reduce using rule 6 (statement -> declare_statement .)
    DECLARE         reduce using rule 6 (statement -> declare_statement .)
    SET             reduce using rule 6 (statement -> declare_statement .)
    SELECT          reduce using rule 6 (statement -> declare_statement .)
    INSERT          reduce using rule 6 (statement -> declare_statement .)
    ALTER           reduce using rule 6 (statement -> declare_statement .)
    IF              reduce using rule 6 (statement -> declare_statement .)
    EXEC            reduce using rule 6 (statement -> declare_statement .)
    DROP            reduce using rule 6 (statement -> declare_statement .)
    UPDATE          reduce using rule 6 (statement -> declare_statement .)
    WHILE           reduce using rule 6 (statement -> declare_statement .)
    TRUNCATE        reduce using rule 6 (statement -> declare_statement .)
    DELETE          reduce using rule 6 (statement -> declare_statement .)
    $end            reduce using rule 6 (statement -> declare_statement .)
    END             reduce using rule 6 (statement -> declare_statement .)
    ELSE            reduce using rule 6 (statement -> declare_statement .)
    RETURN          reduce using rule 6 (statement -> declare_statement .)


state 7

    (7) statement -> set_statement .

    CREATE          reduce using rule 7 (statement -> set_statement .)
    USE             reduce using rule 7 (statement -> set_statement .)
    DECLARE         reduce using rule 7 (statement -> set_statement .)
    SET             reduce using rule 7 (statement -> set_statement .)
    SELECT          reduce using rule 7 (statement -> set_statement .)
    INSERT          reduce using rule 7 (statement -> set_statement .)
    ALTER           reduce using rule 7 (statement -> set_statement .)
    IF              reduce using rule 7 (statement -> set_statement .)
    EXEC            reduce using rule 7 (statement -> set_statement .)
    DROP            reduce using rule 7 (statement -> set_statement .)
    UPDATE          reduce using rule 7 (statement -> set_statement .)
    WHILE           reduce using rule 7 (statement -> set_statement .)
    TRUNCATE        reduce using rule 7 (statement -> set_statement .)
    DELETE          reduce using rule 7 (statement -> set_statement .)
    $end            reduce using rule 7 (statement -> set_statement .)
    END             reduce using rule 7 (statement -> set_statement .)
    ELSE            reduce using rule 7 (statement -> set_statement .)
    RETURN          reduce using rule 7 (statement -> set_statement .)


state 8

    (8) statement -> create_table_statement .

    CREATE          reduce using rule 8 (statement -> create_table_statement .)
    USE             reduce using rule 8 (statement -> create_table_statement .)
    DECLARE         reduce using rule 8 (statement -> create_table_statement .)
    SET             reduce using rule 8 (statement -> create_table_statement .)
    SELECT          reduce using rule 8 (statement -> create_table_statement .)
    INSERT          reduce using rule 8 (statement -> create_table_statement .)
    ALTER           reduce using rule 8 (statement -> create_table_statement .)
    IF              reduce using rule 8 (statement -> create_table_statement .)
    EXEC            reduce using rule 8 (statement -> create_table_statement .)
    DROP            reduce using rule 8 (statement -> create_table_statement .)
    UPDATE          reduce using rule 8 (statement -> create_table_statement .)
    WHILE           reduce using rule 8 (statement -> create_table_statement .)
    TRUNCATE        reduce using rule 8 (statement -> create_table_statement .)
    DELETE          reduce using rule 8 (statement -> create_table_statement .)
    $end            reduce using rule 8 (statement -> create_table_statement .)
    END             reduce using rule 8 (statement -> create_table_statement .)
    ELSE            reduce using rule 8 (statement -> create_table_statement .)
    RETURN          reduce using rule 8 (statement -> create_table_statement .)


state 9

    (9) statement -> select_statement .

    CREATE          reduce using rule 9 (statement -> select_statement .)
    USE             reduce using rule 9 (statement -> select_statement .)
    DECLARE         reduce using rule 9 (statement -> select_statement .)
    SET             reduce using rule 9 (statement -> select_statement .)
    SELECT          reduce using rule 9 (statement -> select_statement .)
    INSERT          reduce using rule 9 (statement -> select_statement .)
    ALTER           reduce using rule 9 (statement -> select_statement .)
    IF              reduce using rule 9 (statement -> select_statement .)
    EXEC            reduce using rule 9 (statement -> select_statement .)
    DROP            reduce using rule 9 (statement -> select_statement .)
    UPDATE          reduce using rule 9 (statement -> select_statement .)
    WHILE           reduce using rule 9 (statement -> select_statement .)
    TRUNCATE        reduce using rule 9 (statement -> select_statement .)
    DELETE          reduce using rule 9 (statement -> select_statement .)
    $end            reduce using rule 9 (statement -> select_statement .)
    END             reduce using rule 9 (statement -> select_statement .)
    ELSE            reduce using rule 9 (statement -> select_statement .)
    RETURN          reduce using rule 9 (statement -> select_statement .)


state 10

    (10) statement -> insert_statement .

    CREATE          reduce using rule 10 (statement -> insert_statement .)
    USE             reduce using rule 10 (statement -> insert_statement .)
    DECLARE         reduce using rule 10 (statement -> insert_statement .)
    SET             reduce using rule 10 (statement -> insert_statement .)
    SELECT          reduce using rule 10 (statement -> insert_statement .)
    INSERT          reduce using rule 10 (statement -> insert_statement .)
    ALTER           reduce using rule 10 (statement -> insert_statement .)
    IF              reduce using rule 10 (statement -> insert_statement .)
    EXEC            reduce using rule 10 (statement -> insert_statement .)
    DROP            reduce using rule 10 (statement -> insert_statement .)
    UPDATE          reduce using rule 10 (statement -> insert_statement .)
    WHILE           reduce using rule 10 (statement -> insert_statement .)
    TRUNCATE        reduce using rule 10 (statement -> insert_statement .)
    DELETE          reduce using rule 10 (statement -> insert_statement .)
    $end            reduce using rule 10 (statement -> insert_statement .)
    END             reduce using rule 10 (statement -> insert_statement .)
    ELSE            reduce using rule 10 (statement -> insert_statement .)
    RETURN          reduce using rule 10 (statement -> insert_statement .)


state 11

    (11) statement -> create_function_statement .

    CREATE          reduce using rule 11 (statement -> create_function_statement .)
    USE             reduce using rule 11 (statement -> create_function_statement .)
    DECLARE         reduce using rule 11 (statement -> create_function_statement .)
    SET             reduce using rule 11 (statement -> create_function_statement .)
    SELECT          reduce using rule 11 (statement -> create_function_statement .)
    INSERT          reduce using rule 11 (statement -> create_function_statement .)
    ALTER           reduce using rule 11 (statement -> create_function_statement .)
    IF              reduce using rule 11 (statement -> create_function_statement .)
    EXEC            reduce using rule 11 (statement -> create_function_statement .)
    DROP            reduce using rule 11 (statement -> create_function_statement .)
    UPDATE          reduce using rule 11 (statement -> create_function_statement .)
    WHILE           reduce using rule 11 (statement -> create_function_statement .)
    TRUNCATE        reduce using rule 11 (statement -> create_function_statement .)
    DELETE          reduce using rule 11 (statement -> create_function_statement .)
    $end            reduce using rule 11 (statement -> create_function_statement .)
    END             reduce using rule 11 (statement -> create_function_statement .)
    ELSE            reduce using rule 11 (statement -> create_function_statement .)
    RETURN          reduce using rule 11 (statement -> create_function_statement .)


state 12

    (12) statement -> create_procedure_statement .

    CREATE          reduce using rule 12 (statement -> create_procedure_statement .)
    USE             reduce using rule 12 (statement -> create_procedure_statement .)
    DECLARE         reduce using rule 12 (statement -> create_procedure_statement .)
    SET             reduce using rule 12 (statement -> create_procedure_statement .)
    SELECT          reduce using rule 12 (statement -> create_procedure_statement .)
    INSERT          reduce using rule 12 (statement -> create_procedure_statement .)
    ALTER           reduce using rule 12 (statement -> create_procedure_statement .)
    IF              reduce using rule 12 (statement -> create_procedure_statement .)
    EXEC            reduce using rule 12 (statement -> create_procedure_statement .)
    DROP            reduce using rule 12 (statement -> create_procedure_statement .)
    UPDATE          reduce using rule 12 (statement -> create_procedure_statement .)
    WHILE           reduce using rule 12 (statement -> create_procedure_statement .)
    TRUNCATE        reduce using rule 12 (statement -> create_procedure_statement .)
    DELETE          reduce using rule 12 (statement -> create_procedure_statement .)
    $end            reduce using rule 12 (statement -> create_procedure_statement .)
    END             reduce using rule 12 (statement -> create_procedure_statement .)
    ELSE            reduce using rule 12 (statement -> create_procedure_statement .)
    RETURN          reduce using rule 12 (statement -> create_procedure_statement .)


state 13

    (13) statement -> alter_table_statement .

    CREATE          reduce using rule 13 (statement -> alter_table_statement .)
    USE             reduce using rule 13 (statement -> alter_table_statement .)
    DECLARE         reduce using rule 13 (statement -> alter_table_statement .)
    SET             reduce using rule 13 (statement -> alter_table_statement .)
    SELECT          reduce using rule 13 (statement -> alter_table_statement .)
    INSERT          reduce using rule 13 (statement -> alter_table_statement .)
    ALTER           reduce using rule 13 (statement -> alter_table_statement .)
    IF              reduce using rule 13 (statement -> alter_table_statement .)
    EXEC            reduce using rule 13 (statement -> alter_table_statement .)
    DROP            reduce using rule 13 (statement -> alter_table_statement .)
    UPDATE          reduce using rule 13 (statement -> alter_table_statement .)
    WHILE           reduce using rule 13 (statement -> alter_table_statement .)
    TRUNCATE        reduce using rule 13 (statement -> alter_table_statement .)
    DELETE          reduce using rule 13 (statement -> alter_table_statement .)
    $end            reduce using rule 13 (statement -> alter_table_statement .)
    END             reduce using rule 13 (statement -> alter_table_statement .)
    ELSE            reduce using rule 13 (statement -> alter_table_statement .)
    RETURN          reduce using rule 13 (statement -> alter_table_statement .)


state 14

    (14) statement -> if_statement .

    CREATE          reduce using rule 14 (statement -> if_statement .)
    USE             reduce using rule 14 (statement -> if_statement .)
    DECLARE         reduce using rule 14 (statement -> if_statement .)
    SET             reduce using rule 14 (statement -> if_statement .)
    SELECT          reduce using rule 14 (statement -> if_statement .)
    INSERT          reduce using rule 14 (statement -> if_statement .)
    ALTER           reduce using rule 14 (statement -> if_statement .)
    IF              reduce using rule 14 (statement -> if_statement .)
    EXEC            reduce using rule 14 (statement -> if_statement .)
    DROP            reduce using rule 14 (statement -> if_statement .)
    UPDATE          reduce using rule 14 (statement -> if_statement .)
    WHILE           reduce using rule 14 (statement -> if_statement .)
    TRUNCATE        reduce using rule 14 (statement -> if_statement .)
    DELETE          reduce using rule 14 (statement -> if_statement .)
    $end            reduce using rule 14 (statement -> if_statement .)
    END             reduce using rule 14 (statement -> if_statement .)
    ELSE            reduce using rule 14 (statement -> if_statement .)
    RETURN          reduce using rule 14 (statement -> if_statement .)


state 15

    (15) statement -> exec_statement .

    CREATE          reduce using rule 15 (statement -> exec_statement .)
    USE             reduce using rule 15 (statement -> exec_statement .)
    DECLARE         reduce using rule 15 (statement -> exec_statement .)
    SET             reduce using rule 15 (statement -> exec_statement .)
    SELECT          reduce using rule 15 (statement -> exec_statement .)
    INSERT          reduce using rule 15 (statement -> exec_statement .)
    ALTER           reduce using rule 15 (statement -> exec_statement .)
    IF              reduce using rule 15 (statement -> exec_statement .)
    EXEC            reduce using rule 15 (statement -> exec_statement .)
    DROP            reduce using rule 15 (statement -> exec_statement .)
    UPDATE          reduce using rule 15 (statement -> exec_statement .)
    WHILE           reduce using rule 15 (statement -> exec_statement .)
    TRUNCATE        reduce using rule 15 (statement -> exec_statement .)
    DELETE          reduce using rule 15 (statement -> exec_statement .)
    $end            reduce using rule 15 (statement -> exec_statement .)
    END             reduce using rule 15 (statement -> exec_statement .)
    ELSE            reduce using rule 15 (statement -> exec_statement .)
    RETURN          reduce using rule 15 (statement -> exec_statement .)


state 16

    (16) statement -> drop_table_statement .

    CREATE          reduce using rule 16 (statement -> drop_table_statement .)
    USE             reduce using rule 16 (statement -> drop_table_statement .)
    DECLARE         reduce using rule 16 (statement -> drop_table_statement .)
    SET             reduce using rule 16 (statement -> drop_table_statement .)
    SELECT          reduce using rule 16 (statement -> drop_table_statement .)
    INSERT          reduce using rule 16 (statement -> drop_table_statement .)
    ALTER           reduce using rule 16 (statement -> drop_table_statement .)
    IF              reduce using rule 16 (statement -> drop_table_statement .)
    EXEC            reduce using rule 16 (statement -> drop_table_statement .)
    DROP            reduce using rule 16 (statement -> drop_table_statement .)
    UPDATE          reduce using rule 16 (statement -> drop_table_statement .)
    WHILE           reduce using rule 16 (statement -> drop_table_statement .)
    TRUNCATE        reduce using rule 16 (statement -> drop_table_statement .)
    DELETE          reduce using rule 16 (statement -> drop_table_statement .)
    $end            reduce using rule 16 (statement -> drop_table_statement .)
    END             reduce using rule 16 (statement -> drop_table_statement .)
    ELSE            reduce using rule 16 (statement -> drop_table_statement .)
    RETURN          reduce using rule 16 (statement -> drop_table_statement .)


state 17

    (17) statement -> update_statement .

    CREATE          reduce using rule 17 (statement -> update_statement .)
    USE             reduce using rule 17 (statement -> update_statement .)
    DECLARE         reduce using rule 17 (statement -> update_statement .)
    SET             reduce using rule 17 (statement -> update_statement .)
    SELECT          reduce using rule 17 (statement -> update_statement .)
    INSERT          reduce using rule 17 (statement -> update_statement .)
    ALTER           reduce using rule 17 (statement -> update_statement .)
    IF              reduce using rule 17 (statement -> update_statement .)
    EXEC            reduce using rule 17 (statement -> update_statement .)
    DROP            reduce using rule 17 (statement -> update_statement .)
    UPDATE          reduce using rule 17 (statement -> update_statement .)
    WHILE           reduce using rule 17 (statement -> update_statement .)
    TRUNCATE        reduce using rule 17 (statement -> update_statement .)
    DELETE          reduce using rule 17 (statement -> update_statement .)
    $end            reduce using rule 17 (statement -> update_statement .)
    END             reduce using rule 17 (statement -> update_statement .)
    ELSE            reduce using rule 17 (statement -> update_statement .)
    RETURN          reduce using rule 17 (statement -> update_statement .)


state 18

    (18) statement -> while_statement .
